[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/dialogues/dialogue_system.gd" type="Script" id=1]
[ext_resource path="res://sound/ui_dialogue.wav" type="AudioStream" id=2]
[ext_resource path="res://ui/dialogues/schemas/stage_1/wr-hey.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/dialogue.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/dialogues/schemas/stage_1/mireska-shrug.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "hide_all"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("dialogue_window_top:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.6, 1 ),
"update": 0,
"values": [ Vector2( 52.3444, 135.454 ), Vector2( 570, 135.454 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_window_top:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialogue_window_bot:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.6, 1 ),
"update": 0,
"values": [ Vector2( 0, 464.615 ), Vector2( -560, 464.615 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialogue_window_bot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("dialogue_window_bot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_window_bot:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.41, 1 ),
"update": 0,
"values": [ Vector2( -560, 464.615 ), Vector2( 0, 464.615 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("dialogue_window_top:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 570, 135.454 ), Vector2( 52.3444, 135.454 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_window_top:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "enable_bot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialogue_window_bot/dialogue_text_bot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.67, 0.67, 0.67, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_window_bot/dialogue_sprite_bot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.670588, 0.670588, 0.670588, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "enable_top"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialogue_window_top/dialogue_sprite_top:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.67, 0.67, 0.67, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialogue_window_top/dialogue_text_top:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.67, 0.67, 0.67, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="dialogue_system" type="Node2D"]
script = ExtResource( 1 )

[node name="dialogue_window_top" type="ColorRect" parent="."]
margin_left = 52.3444
margin_top = 135.454
margin_right = 602.344
margin_bottom = 315.455
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_text_top" type="Label" parent="dialogue_window_top"]
modulate = Color( 0.67, 0.67, 0.67, 1 )
margin_left = 20.0
margin_top = 15.0
margin_right = 290.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 4 )
text = "Mhm, no doubt about that. But you could as well admire birds and bees elsewhere. I’m not letting you into to the river, sis. They’ve warned me beforehand."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_sprite_top" type="TextureRect" parent="dialogue_window_top"]
modulate = Color( 0.67, 0.67, 0.67, 1 )
margin_left = 224.497
margin_top = -137.598
margin_right = 648.497
margin_bottom = 286.402
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_window_bot" type="ColorRect" parent="."]
margin_top = 464.615
margin_right = 550.0
margin_bottom = 644.615
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_text_bot" type="Label" parent="dialogue_window_bot"]
modulate = Color( 0.67, 0.67, 0.67, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -290.0
margin_top = 15.0
margin_right = -19.9999
margin_bottom = 165.0
custom_fonts/font = ExtResource( 4 )
text = "Oh, some people seem to like the solitude of Middelaine – but absolutely, I’m here for the nature. Y’know, breathing fresh air, listening to birdsongs, picking 
f l o w e r s."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogue_sprite_bot" type="TextureRect" parent="dialogue_window_bot"]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
margin_left = -96.8001
margin_top = -199.9
margin_right = 327.2
margin_bottom = 224.1
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animations_movement" type="AnimationPlayer" parent="."]
anims/hide_all = SubResource( 1 )
anims/show_bottom = SubResource( 2 )
anims/show_top = SubResource( 3 )

[node name="animations_enabler" type="AnimationPlayer" parent="."]
anims/enable_bot = SubResource( 4 )
anims/enable_top = SubResource( 5 )

[node name="modulate_tween" type="Tween" parent="."]

[node name="movement_tween" type="Tween" parent="."]

[node name="dialogue_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0
bus = "UI"
